tryna fix that overflow-x...

--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,10 @@ code {
 }
 
 @media screen and (max-width: 600px) {
+    * {
+        overflow-x: hidden;
+    }
+
     #main-wrapper {
         flex-direction: column;
     }
